--- a/debian/control
+++ b/debian/control
@@ -48,8 +48,8 @@ Build-Depends:
  python3-numpy,
  zlib1g-dev (>= 1.2.5),
 Standards-Version: 4.1.1
-Vcs-Git: https://anonscm.debian.org/git/debian-science/packages/opencv.git -b sid
-Vcs-Browser: https://anonscm.debian.org/git/debian-science/packages/opencv.git
+Vcs-Git: https://salsa.debian.org/science-team/opencv.git -b sid
+Vcs-Browser: https://salsa.debian.org/science-team/opencv
 Homepage: https://opencv.org
 
 Package: opencv-doc
